# loralens

./: .gitignore  README.md  REFACTORING_GUIDE.md  plot_preemptable_training_metrics.py  pyproject.toml  train.pbs  train.pbs.e6873123  train.pbs.e6873128  train.pbs.e6873132  train.pbs.e6874015  train.pbs.e6874021  train.pbs.e6876771  train.pbs.e6876776  train.pbs.e6877783  train.pbs.e6877792  train.pbs.e6877807  train.pbs.e6878175  train.pbs.e6878222  train.pbs.e6878224  train.pbs.o6873132  train.pbs.o6877792  train_405b.pbs  train_llama.pbs  train_tuned_baseline.pbs  train_tuned_baseline.pbs.e6874017  train_tuned_baseline.pbs.e6874018  train_tuned_baseline.pbs.e6874020  train_tuned_baseline.pbs.o6874017
jobs/: README.md
jobs/env/: llama3_8b_lora_r64_subsetkl_topk512_10node_debug.env  llama3_8b_tuned_fullkl_24node_prod.env
jobs/launch/: run_command_task.sh  run_env_task.sh  run_manifest_worker.sh  run_manifest_worker_continue.sh
jobs/lib/: common.sh
jobs/pbs/: compute_intrinsic_dimensionality.pbs  plot_intrinsic_dimensionality.pbs  run_all_nodes_single_run.sh  run_multinode_pairs.sh  run_single_env.sh  run_sweep_manifest.sh
jobs/submit/: gpt2_attention_mc_r64_512x512_500_debug.sh  gpt2_combined_head_tail_mc_sweep_resume_prod.sh  gpt2_expanded_hooks_three_run.sh  gpt2_expanded_mc_r64_512x512_500_debug_scaling.sh  gpt2_hajek_clip_sweep_250_debug_scaling.sh  gpt2_hajek_critical_512x512_debug.sh  gpt2_lora_init_fullkl_r64_debug.sh  gpt2_lora_init_mc_256x256_r64_debug.sh  gpt2_lora_ridge_lambda_norm_ablation_r64_debug.sh  gpt2_lora_ridge_lr_schedule_mc256_r64_debug.sh  gpt2_lora_ridge_metric_ablation_r64_debug.sh  gpt2_lora_ridge_only_r64_debug.sh  gpt2_lowrank_head_tail_mc_sweep_resume_all_prod.sh  gpt2_lowrank_sweep_1.sh  gpt2_lowrank_sweep_2.sh  gpt2_lowrank_sweep_3.sh  gpt2_lowrank_sweep_4.sh  gpt2_lowrank_sweep_resume_all.sh  gpt2_lowrank_sweep_resume_all_capacity.sh  gpt2_lowrank_sweep_resume_all_preemptable.sh  gpt2_lowrank_sweep_resume_all_prod.sh  gpt2_mixed_tail_proposal_sweep_250_debug_scaling.sh  gpt2_r64_estimator_comparison_250_debug_scaling.sh  gpt2_r64_mc_250_debug_scaling.sh  gpt2_standard_head_tail_mc_sweep_resume_all_prod.sh  gpt2_subset_k2_256x256_debug.sh  gpt2_subset_k2_k3_lr_sweep_250_debug_scaling.sh  gpt2_subset_k3_256x256_debug.sh  llama3_70b_feasibility_cpuonly_debug.sh  llama3_70b_feasibility_direct_debug.sh  llama3_70b_feasibility_proxy.sh  llama3_8b_lora_r64_topk512_10node_debug.sh  llama3_8b_tuned_fullkl_24node_prod.sh  requeue_until_complete.sh  submit_gpt2_lowrank_sweep_part.sh
scripts/: compute_intrinsic_dimensionality.py  eval_write_injection.pbs  eval_write_injection.py  migrate_checkpoints.py  plot_intrinsic_dimensionality.py  plot_layerwise_init_comparison.py  plot_ridge_lens_results.py  plot_ridge_polish_layerwise.py  probe_llama3_70b_feasibility_memory.py  run_with_rss_sampler.py  submit_chain.sh  summarize_llama3_70b_feasibility_direct.py  summarize_llama3_70b_feasibility_proxy.py  train_gpt2_bidir_ortho_debug.pbs  train_gpt2_bidir_suffix_debug.pbs  train_gpt2_mc_expanded_debug.pbs  train_llama3_70b_mc_expanded.pbs  train_llama3_70b_mc_resume.pbs  train_llama3_8b_fsdp_10node_bench.pbs  train_llama3_8b_fsdp_2node.pbs  train_llama3_8b_lora_r256_mc_20node.pbs  train_llama3_8b_lora_r256_mc_20node_resume.pbs  train_llama3_8b_lora_r64_mc_20node.pbs  train_llama3_8b_lora_r64_mc_20node_resume.pbs  train_llama3_8b_mc_expanded_1node.pbs  train_llama3_8b_mc_expanded_debug.pbs  train_llama3_8b_tuned_kl_20node.pbs
src/loralens/: __init__.py  initialization.py
src/loralens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_refactor_safety.py
tests/data/: test_chunked_text_dataset.py  test_loader.py
tests/hooks/: test_activation_hook.py  test_base_hook.py  test_hook_manager.py  test_hooks.py
tests/integration/: test_hooks_with_gpt2.py
tests/lenses/: test_lenses.py  test_logit_lens.py  test_lora_lens.py  test_subset_memory.py  test_tuned_lens.py
tests/losses/: test_losses.py
(+51 files in other folders)
