[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loralens"
version = "0.0.1"
description = "LoRA Lens and related lens tools for transformer models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
keywords = ["transformers", "interpretability", "lora", "tuned-lens", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies (edit as needed)
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.40.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["loralens*"]

# --- Tooling configuration below is optional but recommended ---

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = false
mypy_path = ["src"]