[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loralens"
version = "0.3.0"
description = "Scalable lens-based interpretability for large language models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "pettyjohnjn" },
]
keywords = [
    "interpretability",
    "transformers",
    "lens",
    "lora",
    "mechanistic-interpretability",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24",
    "datasets>=2.0.0",
    # Modular sub-packages
    "hookbox",
    "subset-kl",
]

[project.optional-dependencies]
cuda = [
    "indexed_logits",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
all = [
    "loralens[cuda,dev]",
]

[project.scripts]
loralens = "loralens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
